// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body component tests base = false, color = default, disabled = false, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      false,
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = false, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      false,
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = false, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "lineHeight": 28,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = false, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "lineHeight": 28,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = true, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      false,
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = true, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      false,
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = true, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "lineHeight": 28,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = default, disabled = true, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      false,
      {
        "lineHeight": 28,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = false, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      false,
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = false, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      false,
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = false, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      false,
      {
        "lineHeight": 28,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = false, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      false,
      {
        "lineHeight": 28,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = true, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      false,
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = true, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      false,
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = true, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      false,
      {
        "lineHeight": 28,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = primary, disabled = true, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      false,
      {
        "lineHeight": 28,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = false, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      false,
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = false, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      false,
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = false, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      false,
      {
        "lineHeight": 28,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = false, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      false,
      {
        "lineHeight": 28,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = true, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      false,
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = true, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      false,
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = true, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      false,
      {
        "lineHeight": 28,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = false, color = secondary, disabled = true, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      false,
      {
        "lineHeight": 28,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = false, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = false, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = false, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = false, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = true, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = true, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = true, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = default, disabled = true, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = false, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = false, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = false, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = false, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = true, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = true, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = true, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = primary, disabled = true, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#44e858",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = false, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = false, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = false, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = false, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      false,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = true, paragraph = false, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = true, paragraph = false, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      false,
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = true, paragraph = true, weight = bold 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 700,
        "letterSpacing": -0.48,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests base = true, color = secondary, disabled = true, paragraph = true, weight = regular 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#85888e",
      },
      {
        "fontSize": 14,
        "lineHeight": 20,
      },
      {
        "lineHeight": 24,
      },
      {
        "opacity": 0.6,
      },
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;

exports[`Body component tests default props 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 16,
        "includeFontPadding": false,
        "lineHeight": 22,
        "verticalAlign": "middle",
      },
      {
        "fontWeight": 400,
      },
      {
        "color": "#2b2e33",
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="Body"
>
  Text
</Text>
`;
